<resources>
    <string name="app_name">Test App</string>
    <string name="channel_name">Channel name</string>
    <string name="description">Description</string>
    <string name="add_descr">You can provide an additional description for
        your channel</string>
    <string name="create_channel">New Channel</string>
    <string name="public_link">Public-link</string>
    <string name="typi_team">typi.team/</string>
    <string name="link">link</string>
    <string name="typi_team_link">typi.team/link</string>
    <string name="link_message">People can share this link with others and find your channel using Typi search.</string>
    <string name="mute">Mute</string>
    <string name="edit">Edit</string>
    <string name="clear_history">Clear History</string>
    <string name="leave_channel">Leave Channel</string>
    <string name="leave_and_delete_channel">Leave and Delete Channel</string>
    <string name="test_channel">Test Channel</string>
    <string name="default_subscribers">3 subscribers</string>
    <string name="default_descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</string>
    <string name="share_link">Share-link</string>
    <string name="default_link">type.team/test_channel</string>
    <string name="admins">Admins</string>
    <string name="default_admin_count">1</string>
    <string name="subscribers">Subscribers</string>
    <string name="default_subs_count">3</string>
    <string name="username">Username</string>

</resources>