<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublicLinkActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar_create"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/public_link"
        android:textColor="@color/blue"
        android:textSize="14sp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/channelLinkEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textUri"
        android:hint="@string/typi_team_link"
        android:theme="@style/EditTextTheme"
        >

    </com.google.android.material.textfield.TextInputEditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/blue"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/link_message"
        android:layout_marginTop="12dp"/>




</LinearLayout>