<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateChannelActivity"
    android:orientation="vertical"
    >

    <include layout="@layout/toolbar_create"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        >


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatarButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:scaleType="fitXY"
            app:shapeAppearanceOverlay="@style/circledShapeableImageView"
            android:src="@drawable/camera"
            android:clickable="true"
            android:focusable="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/channelNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/channel_name"
            android:inputType="textCapSentences"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:theme="@style/EditTextTheme"
            />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/channelDescrEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:theme="@style/EditTextTheme"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_descr"
        android:textSize="14sp"/>


</LinearLayout>